--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ h1 {
     display: flex;
     width: 50vw;
     margin: auto;
-    justify-content: space-between;
+    justify-content: center;
     font-size: 2rem;
 }
 
@@ -58,7 +58,7 @@ h2 {
 }
 
 button {
-    margin: ;
+    margin: auto;
     background-color: white;
     border: 1px solid black;
     border-radius: 10px;
