--- a/styles.css
+++ b/styles.css
@@ -20,8 +20,10 @@ h1 {
     font-size: 2rem;
 }
 
-.player {
+.player-symbol,
+.player-name {
     padding: 1rem;
+    font-weight: 900;
 }
 
 .board {
@@ -36,7 +38,7 @@ h1 {
 }
 
 li {
-    background-color: grey;
+    background-color: rgb(223, 223, 223);
     text-align: center;
     display: flex;
     align-items: center;
@@ -45,11 +47,19 @@ li {
     height: 30%;
     margin: 1%;
     border-radius: 20px;
+    cursor: pointer;
+    font-size: 4rem;
+    font-weight: 900;
 }
 
 h2 {
     text-align: center;
     margin: 1rem
+}
+
+h3 {
+    text-align: center;
+    margin: 1rem;
 }
 
 .button-container {
@@ -65,4 +75,8 @@ button {
     padding: 1rem;
     margin: 0.5rem;
     font-size: 2rem;
+}
+
+.active {
+    background-color: yellow;
 }
